test/compilable/imports/test5230a.d
module imports.test5230a;

class Base
{
    int method()
    out (res)
    {
    }
    body
    {
        return 42;
    }
}
