test/fail_compilation/fail330.d
int fun()
out(result) { result = 2; }
body { return 1; }

